[gd_scene load_steps=13 format=3 uid="uid://cs5pvahf38qdw"]

[ext_resource type="Script" path="res://SCRIPTS/level.gd" id="1_f87td"]
[ext_resource type="PackedScene" uid="uid://co77vqbj8tbj4" path="res://SCENE/start_menu.tscn" id="2_xlx54"]
[ext_resource type="PackedScene" uid="uid://bqcfrxm21lxa1" path="res://SCENE/player.tscn" id="3_x4ln5"]
[ext_resource type="PackedScene" uid="uid://b312dkg3bdpq5" path="res://SCENE/speed_boost.tscn" id="4_gjmoe"]
[ext_resource type="PackedScene" uid="uid://c5bcnnxo1vige" path="res://SCENE/ui_layer.tscn" id="4_rcgn7"]
[ext_resource type="PackedScene" uid="uid://c5aeo451sdwy" path="res://SCENE/background_01.tscn" id="4_tsayv"]
[ext_resource type="PackedScene" uid="uid://c1kdj1ccsr8y6" path="res://SCENE/star.tscn" id="5_7llwe"]
[ext_resource type="PackedScene" uid="uid://c2oxd5gviwrqd" path="res://SCENE/satellite.tscn" id="6_prxbx"]
[ext_resource type="PackedScene" uid="uid://bp3e2ja8l" path="res://SCENE/asteroid.tscn" id="7_peg54"]
[ext_resource type="PackedScene" uid="uid://bd0xoq8a7ccg8" path="res://SCENE/comet.tscn" id="8_fayc7"]
[ext_resource type="PackedScene" uid="uid://dwvh6tkxy5h0x" path="res://SCENE/start.tscn" id="9_lpjgg"]
[ext_resource type="PackedScene" uid="uid://b7kd42vp1cap2" path="res://SCENE/exit.tscn" id="10_2gy3f"]

[node name="Level" type="Node2D"]
script = ExtResource("1_f87td")
next_level = ExtResource("2_xlx54")

[node name="Background_01" parent="." instance=ExtResource("4_tsayv")]

[node name="UILayer" parent="." instance=ExtResource("4_rcgn7")]

[node name="player" parent="." node_paths=PackedStringArray("start") instance=ExtResource("3_x4ln5")]
position = Vector2(483, 268)
start = NodePath("../Interactables/Start")

[node name="Camera2D" type="Camera2D" parent="player"]

[node name="Interactables" type="Node" parent="."]

[node name="SpeedBoost" parent="Interactables" instance=ExtResource("4_gjmoe")]
position = Vector2(524, 99)
rotation = -1.5708

[node name="Star" parent="Interactables" instance=ExtResource("5_7llwe")]
position = Vector2(852, 422)

[node name="Asteroid" parent="Interactables" instance=ExtResource("7_peg54")]
position = Vector2(322, 431)

[node name="Comet" parent="Interactables" instance=ExtResource("8_fayc7")]
position = Vector2(862, 99)

[node name="Satellite" parent="Interactables" instance=ExtResource("6_prxbx")]
position = Vector2(131, 439)

[node name="Start" parent="Interactables" instance=ExtResource("9_lpjgg")]
position = Vector2(229, 150)

[node name="Exit" parent="Interactables" instance=ExtResource("10_2gy3f")]
position = Vector2(882, 269)

[connection signal="touched_player" from="Interactables/SpeedBoost" to="." method="_on_speed_boost_touched_player"]
[connection signal="touched_player" from="Interactables/Star" to="." method="_on_star_touched_player"]
[connection signal="touched_player" from="Interactables/Comet" to="." method="_on_comet_touched_player"]

[editable path="UILayer"]
[editable path="UILayer/HUD"]
